// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matcher error factory should fail if no error is thrown 1`] = `"Expected to receive an error, but no error was thrown"`;

exports[`matcher error factory should throw error if different messages 1`] = `
"Error message is not the same:
- Expected
+ Received

- test
+ test2"
`;

exports[`matcher error factory should throw error if different properties 1`] = `
"Error public fields is not the same:
- Expected
+ Received

  Object {
-   \\"other\\": Object {},
+   \\"other\\": false,
  }"
`;

exports[`matcher error factory should throw error if different types 1`] = `
"Error class is not the same:
- Expected
+ Received

- [Function SpecificError2]
+ [Function SpecificError]"
`;

exports[`matcher rejected promises should throw an error if error factory result does not match 1`] = `
"Error class is not the same:
- Expected
+ Received

- [Function SpecificError]
+ [Function SpecificError2]"
`;
